<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="br.mackenzie.easymarket.Register">

    <TextView
        android:id="@+id/tCadastro"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@color/colorBlack"
        android:padding="5dp"
        android:text="@string/cadastro_de_usu_rio"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:typeface="normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                tools:layout_editor_absoluteY="241dp">

                <TextView
                    android:id="@+id/tInfoPe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimary"
                    android:padding="5dp"
                    android:text="@string/informa_es_pessoais"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:typeface="normal" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/eName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/iName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tName"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/eMail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/iMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tEmail"
                        android:inputType="text|textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ePhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/iPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tPhone"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_Ende"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                tools:layout_editor_absoluteY="437dp">

                <TextView
                    android:id="@+id/tAddress"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/endere_o"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:typeface="normal" />

                <LinearLayout
                    android:id="@+id/CEP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/eCEP"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_zip_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cep"
                            android:inputType="number"
                            android:maxLength="8" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Rua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/eRua"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/iRua"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/rua"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/eNum"
                        android:layout_width="180dp"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/iNum"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="N º"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/eCom"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/iCom"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Complemento"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/eBairro"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/iBairro"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Bairro"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/eCidade"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/iCidade"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:hint="Cidade"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/sp_states"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_User"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                tools:layout_editor_absoluteY="45dp">

                <TextView
                    android:id="@+id/tUserDatas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimary"
                    android:padding="5dp"
                    android:text="Dados Usuário"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:typeface="normal" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/eUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/iUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tUser"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/eSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/iSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tPass"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/eConfSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/iConfSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tConfPass"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bRegisterC"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/tRegister"
                android:textColor="@color/colorSecundary"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="585dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>